--- a/frontend/src/app/componentes/administrador/reportes/reportes.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reportes.component.html
@@ -1,4 +1,3 @@
-<app-reporte-inventario></app-reporte-inventario>
 <div>
     <div>
         <h4 class="pt-2 pl-2"> <i class="fas fa-file-invoice icono pr-2"></i> REPORTES</h4>
@@ -12,7 +11,7 @@
                 <div class=" container texto">
                     Reporte de Ventas
                 </div>
-                <a> <img src="assets/img/ventas.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroVentas"></a>
+                <a> <img src="assets/img/ventas.png" class="card-img-top rounded-circle" [routerLink]="[ '../reporte-ventas']" alt="..."></a>
     
             </div>
     
@@ -51,7 +50,7 @@
                     Reporte de Inventario
                 </div>
     
-                <a > <img src="assets/img/inventario.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroInventario"></a>
+                <a > <img src="assets/img/inventario.png" class="card-img-top rounded-circle" alt="..." [routerLink]="[ '../reporte-inventario']"></a>
     
             </div>
     
@@ -62,5 +61,4 @@
     
     </div>
 </div>
-<app-filtro-inventario></app-filtro-inventario>
-<app-filtro-ventas></app-filtro-ventas>
+
