--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-inventario/filtro-inventario.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-inventario/filtro-inventario.component.html
@@ -62,7 +62,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-agregar" [routerLink]="['/reporte-inventario']">Generar</button>
+          <button type="button" class="btn btn-agregar"  (click)="filtrar()">Generar</button>
         </div>
       </div>
     </div>
