--- a/frontend/src/app/componentes/administrador/reportes/reporte-inventario/reporte-inventario.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-inventario/reporte-inventario.component.html
@@ -9,5 +9,5 @@
         <p>tabla de información</p>
     </div>
 </div>
-<app-filtro-inventario></app-filtro-inventario>
+<app-filtro-inventario (inventarioFiltrado)="recibeInventario($event)"></app-filtro-inventario>
 
