--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-ventas/filtro-ventas.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-ventas/filtro-ventas.component.html
@@ -79,7 +79,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-agregar" (click)="cerrarModal()">Generar</button>
+          <button type="button" class="btn btn-agregar" (click)="filtrar()">Generar</button>
         </div>
       </div>
     </div>
