Componente Reporte De Ingreso

--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-ingresos/filtro-ingresos.component.css
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-ingresos/filtro-ingresos.component.css
@@ -5,3 +5,14 @@
 .error-block {
     color: red;
 }
+
+.modal-header {
+    background-color: #e6c0c9;
+    color: white;
+}
+
+.btn-agregar {
+    background-color: #50a1a5;
+    color: white;
+    border: none;
+}
