--- a/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
@@ -1,1 +1,11 @@
-<p>reporte-usuarios works!</p>
+<div class="container">
+    <div class="row">
+        <h4 class="ml-3">Reporte de Usuarios</h4>
+        <button type="button" class="btn btn-sm mr-3 ml-auto btn-volver" data-toggle="modal" data-target="#filtroUsuarios"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
+    </div>
+    <hr>
+    <div class="row">
+        <p>tabla de información</p>
+    </div>
+</div>
+<app-filtro-usuarios (nuevoProducto)="nuevoUsuario($event)"></app-filtro-usuarios>
