--- a/frontend/src/app/componentes/administrador/reportes/reportes.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reportes.component.html
@@ -12,8 +12,8 @@
                     Reporte de Ventas
                 </div>
 
-                <a> <img src="assets/img/ventas.png" class="card-img-top rounded-circle" [routerLink]="[ '../reporte-ventas']" alt="..."></a>
-  
+                <a [routerLink]="[ '../reporte-ventas']"> <img src="assets/img/ventas.png" class="card-img-top rounded-circle" data-toggle="modal" data-target="#filtroVentas" alt="..."></a>
+
             </div>
 
             <div class="card ml-1 ">
@@ -21,7 +21,7 @@
                 <div class=" container texto">
                     Reporte de Ingresos
                 </div>
-                <a> <img src="assets/img/ingresos.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#ModalIngreso"></a>
+                <a> <img src="assets/img/ingresos.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroIngresos"></a>
 
             </div>
 
@@ -41,7 +41,7 @@
                 <div class=" container texto">
                     Reporte de Usuarios
                 </div>
-                <a> <img src="assets/img/usuarios.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroUsuarios"></a>
+                <a [routerLink]="[ '../reporte-usuarios']"> <img src="assets/img/usuarios.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroUsuarios"></a>
 
             </div>
 
@@ -50,9 +50,9 @@
                 <div class=" container texto">
                     Reporte de Inventario
                 </div>
-    
-                <a > <img src="assets/img/inventario.png" class="card-img-top rounded-circle" alt="..." [routerLink]="[ '../reporte-inventario']"></a>
-    
+
+                <a> <img src="assets/img/inventario.png" class="card-img-top rounded-circle" alt="..." [routerLink]="[ '../reporte-inventario']"></a>
+
             </div>
         </div>
 
@@ -63,4 +63,3 @@
 <app-filtro-ventas></app-filtro-ventas>
 <app-filtro-usuarios></app-filtro-usuarios>
 <app-filtro-ingresos></app-filtro-ingresos>
-
