--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-usuarios/filtro-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-usuarios/filtro-usuarios.component.html
@@ -51,8 +51,9 @@
                 </form>
             </div>
             <div class="modal-footer">
+
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-agregar" [routerLink]="['/reporte-usuarios']">Generar</button>
+                <button type="button" class="btn btn-agregar" (click)="cerrarModal()">Generar</button>
             </div>
         </div>
     </div>
