en la base de datos: columna imagenCategoria->imagencategoria. informacion-pago.componente.html: cambio funcion ejecutada al darle en continuar y en el componente una correccion para que el formulario envie el nombre del cliente.

--- a/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
+++ b/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
@@ -86,7 +86,7 @@
                     <div>
 
                         <button [disabled]="formularioPago.invalid" class="btn btn-info  w-50" 
-                                type="button" (click)="registrarInformacion()">Continuar</button>
+                                type="button" (click)="siguiente()">Continuar</button>
 
                     </div>
                 </div>
