--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-inventario/filtro-inventario.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-inventario/filtro-inventario.component.html
@@ -4,7 +4,7 @@
       <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Filtrar información de inventario</h5>
-          <button type="button" #closeAddExpenseModalInventario class="close" data-dismiss="modal" aria-label="Close">
+          <button [hidden]="true" type="button" #closeAddExpenseModalInventario class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -61,7 +61,7 @@
               </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="regresar()">Regresar</button>
           <button type="button" class="btn btn-agregar"  (click)="filtrar()">Generar</button>
         </div>
       </div>
