--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-ventas/filtro-ventas.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-ventas/filtro-ventas.component.html
@@ -4,9 +4,9 @@
       <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title">Filtrar información de ventas</h5>
-          <button type="button" #closeAddExpenseModalVentas class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+            <button [hidden]="true" type="button" #closeAddExpenseModalVentas class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="modal-body">
           <form [formGroup]="formularioVentas">
@@ -78,7 +78,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="regresar()">Regresar</button>
           <button type="button" class="btn btn-agregar" (click)="filtrar()">Generar</button>
         </div>
       </div>
