--- a/frontend/src/app/componentes/administrador/reportes/reporte-ventas/reporte-ventas.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ventas/reporte-ventas.component.html
@@ -1,11 +1,53 @@
 <div class="container">
-    <div class="row">
+    <div class="row mb-3">
+        <button type="button" class="btn btn-sm mr-auto btn-volver" data-toggle="modal" data-target="#filtroVentas"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
         <h4 class="ml-3">Reporte de ventas</h4>
-        <button type="button" class="btn btn-sm mr-3 ml-auto btn-volver" data-toggle="modal" data-target="#filtroVentas"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
+        <button type="button" class="btn btn-sm ml-auto btn-volver"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Generar PDF</button>
     </div>
-    <hr>
     <div class="row">
-        <p>tabla de información</p>
+        <div class="table-responsive">
+            <table class="table table-hover text-center">
+                <thead>
+                    <tr class="encabezado">
+                        <th scope="col">#</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Categoría</th>
+                        <th scope="col">Tipo de base</th>
+                        <th scope="col">Especie(s)</th>
+                        <th scope="col">Cantidad vendida</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Usuario</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    <tr *ngFor="let producto of ventas" class="product-row">
+                        <th scope="row" class="product-id">{{producto.idproducto}}</th>
+                        <td>{{producto.nombre_producto}}</td>
+                        <td>{{producto.categoria}}</td>
+                        <td>{{producto.tipobase}}</td>
+                        <td>{{producto.especie[1]}}</td>
+                        <td class="text-center">{{producto.cantidad_vendida}}</td>
+                        <td>L {{producto.precio_venta}}</td>
+                        <td>{{producto.fechapedido}}</td>
+                        <td>{{producto.nombre_usuario}}</td>
+                    </tr>
+                    <tr [hidden]="ventas.length===0">
+                        <td colspan="5" class="text-right" style="color:#0c515c"><b>Cantidad total de productos vendidos: </b></td>
+                        <td>{{cantidadTotal}}</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr *ngIf="ventas.length===0">
+                        <td colspan="2">
+                            No hay resultados
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
-<app-filtro-ventas></app-filtro-ventas>
+<app-filtro-ventas (ventasFiltrado)="recibeVentas($event)"></app-filtro-ventas>
