--- a/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
@@ -5,7 +5,30 @@
     </div>
     <hr>
     <div class="row">
-        <p>tabla de información</p>
+        <div class="table-responsive">
+            <table class="table table-hover text-center">
+                <thead>
+                    <tr>
+                        <th scope="col">Código</th>
+                        <th scope="col">Nombre de Usuario</th>
+                        <th scope="col">Correo</th>
+                        <th scope="col">Teléfono</th>
+                        <th scope="col">Dirección</th>
+                        <th scope="col">Fecha registro</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let usuario of usuarios ">
+                        <th scope="row">{{ usuario.idusuario }}</th>
+                        <td>{{ usuario.nombre }}</td>
+                        <td>{{ usuario.correo }}</td>
+                        <td>{{ usuario.telefono }}</td>
+                        <td>{{ usuario.direccion }}</td>
+                        <td>{{ usuario.fecharegistro | date:'d/MM/y' }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
-<app-filtro-usuarios (nuevoProducto)="nuevoUsuario($event)"></app-filtro-usuarios>
+<app-filtro-usuarios (usuarioFiltrado)="recibeUsuario($event)"></app-filtro-usuarios>
