--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-usuarios/filtro-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-usuarios/filtro-usuarios.component.html
@@ -4,7 +4,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Filtrar información de Usuarios</h5>
-                <button type="button" #closeAddExpenseModalUsuarios class="close" data-dismiss="modal" aria-label="Close">
+
+                <button [hidden]="true" type="button" #closeAddExpenseModalUsuarios class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
             </div>
@@ -52,7 +53,7 @@
             </div>
             <div class="modal-footer">
 
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="regresar()">Regresar</button>
                 <button type="button" class="btn btn-agregar" (click)="filtrar()">Generar</button>
             </div>
         </div>
