--- a/frontend/src/app/componentes/administrador/reportes/reportes.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reportes.component.html
@@ -21,7 +21,7 @@
                 <div class=" container texto">
                     Reporte de Ingresos
                 </div>
-                <a> <img src="assets/img/ingresos.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroIngresos"></a>
+                <a [routerLink]="[ '../reporte-ingresos']"> <img src="assets/img/ingresos.png" class="card-img-top rounded-circle" alt="..." data-toggle="modal" data-target="#filtroReporteIngesos"></a>
 
             </div>
 
@@ -48,8 +48,8 @@
                     Reporte de Inventario
                 </div>
 
-                <a [routerLink]="[ '../reporte-inventario']"> <img src="assets/img/inventario.png" class="card-img-top rounded-circle" data-toggle="modal" data-target="#filtroInventario" alt="..." ></a>
-    
+                <a [routerLink]="[ '../reporte-inventario']"> <img src="assets/img/inventario.png" class="card-img-top rounded-circle" data-toggle="modal" data-target="#filtroInventario" alt="..."></a>
+
 
             </div>
         </div>
