--- a/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-usuarios/reporte-usuarios.component.html
@@ -1,10 +1,11 @@
 <div class="container">
-    <div class="row">
+    <div class="row mb-3">
+        <button type="button" class="btn btn-sm mr-auto btn-volver" data-toggle="modal" data-target="#filtroUsuarios"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
         <h4 class="ml-3">Reporte de Usuarios</h4>
-        <button type="button" class="btn btn-sm mr-3 ml-auto btn-volver" data-toggle="modal" data-target="#filtroUsuarios"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
+        <button type="button" class="btn btn-sm ml-auto btn-volver"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Generar PDF</button>
     </div>
-    <hr>
-    <div class="row">
+
+    <div class="row ">
         <div class="table-responsive">
             <table class="table table-hover text-center">
                 <thead>
