Uso de servicio ingresos

--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
@@ -7,8 +7,8 @@
 
             <div class="content-admin">
 
-                <i class="fas fa-user-tie imagen"></i>
 
+                <i class="fas fa-user imagen"></i>
 
                 <strong><p class="texto2">Administrador</p></strong>
 
