--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.css
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.css
@@ -34,8 +34,8 @@
 }
 
 .icono {
-    padding-left: 20px;
-    font-size: 150%;
+    font-size: 1.3em;
+    margin-left: 20px;
 }
 
 .span {
@@ -44,11 +44,11 @@
 }
 
 .imagen {
-    font-size: 600%;
-    padding-left: 75px;
-    margin-top: 40px;
-    margin-bottom: 10px;
+    font-size: 5em;
     color: #3e7b7e;
+    margin-top: 50px;
+    margin-left: 80px;
+    margin-bottom: 10px;
 }
 
 .texto2 {
