--- a/frontend/src/app/componentes/administrador/inicio-admin/inicio-admin.component.html
+++ b/frontend/src/app/componentes/administrador/inicio-admin/inicio-admin.component.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card-counter primary position-relative">
-                    <i class="fas fa-eye"></i>
+                    <i class="fas fa-eye icono"></i>
                     <span class="count-numbers"> {{visits}}</span>
                     <span class="count-name">Visitas</span>
                 </div>
@@ -16,7 +16,7 @@
 
             <div class="col-md-3">
                 <div class="card-counter info position-relative">
-                    <i class="fa fa-users"></i>
+                    <i class="fa fa-users icono"></i>
                     <span class="count-numbers">{{user}}</span>
                     <span class="count-name">Usuarios</span>
                 </div>
