--- a/frontend/src/app/componentes/administrador/reportes/reportes.component.css
+++ b/frontend/src/app/componentes/administrador/reportes/reportes.component.css
@@ -1,3 +1,7 @@
+.icono {
+    font-size: 1.5em;
+}
+
 .row {
     margin-top: 0%;
     margin-bottom: 0%;
@@ -111,6 +115,6 @@ h2 {
     text-align: center;
 }
 
-img:hover{
-cursor: pointer;
+img:hover {
+    cursor: pointer;
 }
