--- a/frontend/src/app/componentes/administrador/reportes/reporte-ventas/reporte-ventas.component.css
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ventas/reporte-ventas.component.css
@@ -1,3 +1,11 @@
 h4{
     color: #3E7B7E;
 }
+
+.list-group{
+    max-height: 50px;
+    overflow:scroll; 
+    overflow-x:auto;
+    overflow-y:auto;
+    -webkit-overflow-scrolling: touch;
+}
