--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.html
@@ -41,7 +41,7 @@
                     <span class="span">Pedidos</span>
                 </a>
                 <a [routerLink]="['./reportes']" class="list-group-item list-group-item-action ">
-                    <i class="fas fa-file-invoice icono"></i>
+                    <!-- <i class="fas fa-file-invoice icono"></i> -->
 
                     <span class="span">Reportes</span>
                 </a>
