--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-ventas/filtro-ventas.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-ventas/filtro-ventas.component.html
@@ -47,30 +47,30 @@
                         <label for="validationServer05">Categoría</label>
                         <select class="custom-select custom-select-sm" formControlName="categoria">
                             <option disabled active value="">Seleccionar...</option>  
-                            <option *ngFor="let categoria of categorias" value="{{categoria.idcategoria}}">{{categoria.descripcion}}</option>
+                            <option *ngFor="let categoria of categorias" value="{{categoria.descripcion}}">{{categoria.descripcion}}</option>
                         </select>
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="validationServer06">Tipo de base</label>
                         <select class="custom-select custom-select-sm" formControlName="base"  >
                             <option disabled active value="">Seleccionar...</option>  
-                            <option *ngFor="let base of tipoBases" value="{{base.idtipobase}}">{{base.descripcion}}</option>
+                            <option *ngFor="let base of tipoBases" value="{{base.descripcion}}">{{base.descripcion}}</option>
                         </select>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-1">
                         <label for="validationServer07">Género</label>
-                        <select class="custom-select custom-select-sm" formControlName="genero">
+                        <select class="custom-select custom-select-sm" formControlName="genero"  (change)="obtenerEspeciesXGenero($event.target.value)">
                             <option  disabled active value="" >Seleccionar...</option>  
-                            <option *ngFor="let genero of generos" value="{{genero.idgenero}}">{{genero.descripcion_genero}}</option>
+                            <option *ngFor="let genero of generos" value="{{genero.descripcion_genero}}">{{genero.descripcion_genero}}</option>
                         </select>
                     </div>
                     <div class="col-md-6 mb-1">
                         <label for="validationServer08">Especie</label>
                         <select  class="custom-select custom-select-sm" data-live-search="true" formControlName="especie">
                             <option  disabled active value="" >Seleccionar...</option>  
-                            <option *ngFor="let especie of especies" value="{{especie.idespecie}}">{{especie.descripcion_especie}}</option>
+                            <option *ngFor="let especie of especies" value="{{especie.descripcion_especie}}">{{especie.descripcion_especie}}</option>
                         </select>
                     </div>
                 </div>
