Filtrado de usuarios

--- a/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
@@ -25,4 +25,4 @@
         </div>
     </div>
 </div>
-<app-filtro-ingresos></app-filtro-ingresos>
+<app-filtro-ingresos (ingresoFiltrado)="recibeIngresos($event)"></app-filtro-ingresos>
