--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-ingresos/filtro-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-ingresos/filtro-ingresos.component.html
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <h5 class="modal-title">Filtrar información de Ingresos</h5>
 
-                <button [hidden]="true" type="button" #closeAddExpenseModalUsuarios class="close" data-dismiss="modal" aria-label="Close">
+                <button [hidden]="true" type="button" #closeAddExpenseModalIngresos class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
             </div>
@@ -54,7 +54,7 @@
             <div class="modal-footer">
 
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="regresar()">Regresar</button>
-                <button type="button" class="btn btn-agregar">Generar</button>
+                <button type="button" class="btn btn-agregar" (click)="filtrar()">Generar</button>
             </div>
         </div>
     </div>
