--- a/frontend/src/app/componentes/administrador/reportes/modales/filtro-ingresos/filtro-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/modales/filtro-ingresos/filtro-ingresos.component.html
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <h5 class="modal-title">Filtrar información de Ingresos</h5>
 
-                <button [hidden]="true" type="button" #closeAddExpenseModalIngresos class="close" data-dismiss="modal" aria-label="Close">
+                <button [hidden]="false" type="button" #closeAddExpenseModalIngresos class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
             </div>
