--- a/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
+++ b/frontend/src/app/componentes/administrador/reportes/reporte-ingresos/reporte-ingresos.component.html
@@ -1,28 +1,58 @@
 <div class="container">
     <div class="row mb-3">
-        <button type="button" class="btn btn-sm mr-auto btn-volver" data-toggle="modal" data-target="#filtroUsuarios"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
+        <button type="button" class="btn btn-sm mr-auto btn-volver" data-toggle="modal" data-target="#filtroReporteIngesos"><i class="fa fa-reply-all" aria-hidden="true"></i> Volver</button>
         <h4 class="ml-3">Reporte de Ingresos</h4>
         <button type="button" class="btn btn-sm ml-auto btn-volver"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Generar PDF</button>
     </div>
+    <div class=" container">
+        <div class="col-12 col-md-4">
+            <div class="btn-toolbar" role="toolbar" aria-label="">
+                <div class="btn-group" role="group" aria-label="">
+                    <button type="button" class="btn btn-outline-info botones " (click)="ocultarTabla('Anio')">Reporte Mes</button>
+                    <button type="button" class="btn btn-outline-info botones " (click)="ocultarTabla('Mes')">Reporte Año</button>
 
-    <div class="row ">
-        <div class="table-responsive">
-            <table class="table table-hover text-center">
-                <thead>
-                    <tr class="encabezado">
-                        <th scope="col">Código</th>
-                        <th scope="col">Nombre de Usuario</th>
-                        <th scope="col">Correo</th>
-                        <th scope="col">Teléfono</th>
-                        <th scope="col">Dirección</th>
-                        <th scope="col">Fecha registro</th>
-                    </tr>
-                </thead>
-                <tbody>
-
-                </tbody>
-            </table>
+                </div>
+            </div>
         </div>
+        <div class="row ">
+            <div class="table-responsive" [hidden]="tablaOcultaAnio">
+                <table class="table table-hover text-center">
+                    <thead>
+                        <tr class="encabezado">
+                            <th scope="col">Año</th>
+                            <th scope="col">Ingreso</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let ingreAnio of ingresosAnio ">
+                            <th scope="row">{{ ingreAnio.ingresosporanio }}</th>
+                            <td>{{ ingreAnio.ventasxanio }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="row ">
+            <div class="table-responsive" [hidden]="tablaOcultaMes">
+                <table class="table table-hover text-center">
+                    <thead>
+                        <tr class="encabezado">
+                            <th scope="col">Mes</th>
+                            <th scope="col">Ingreso</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let ingreMes of ingresosMes ">
+                            <th scope="row">{{ ingreMes.ingresospormes }}</th>
+                            <td>{{ ingreMes.ventasxmes }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
-</div>
-<app-filtro-ingresos (ingresoFiltrado)="recibeIngresos($event)"></app-filtro-ingresos>
+    <app-filtro-ingresos (ingresoFiltrado)="recibeIngresos($event)"></app-filtro-ingresos>
