--- a/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
+++ b/frontend/src/app/componentes/proceso-pago/informacion-pago/informacion-pago.component.html
@@ -94,13 +94,18 @@
         </form>
 
         <form *ngIf="etapa == 2" novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest" class="col-lg-6 col-md-10 ml-auto mr-auto">
-            <input type="text" formControlName="name" placeholder="Jane Doe">
+            <h4 class="mt-2">Ingrese los datos de su tarjeta:</h4>
+            <input type="text" formControlName="name" placeholder="Titular de la tarjeta" class="form-control form-control-sm p-2 mt-3 mb-3">
             <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
-            <div class="mt-2 mb-4 text-center">
+            <div class="mt-4 mb-4 text-center">
                 <div>
                     <button type="submit" class="btn btn-info  w-50">
                         Pagar L.{{total}}
                     </button>
+                    <br>
+                    <span class="text-success">
+                        ({{subtotal}} + {{envio}} de envío)
+                    </span>
                 </div>
             </div>
         </form>
